Fixing min-heights to prevent dialog from collapsing on itself.

--- a/media/css/lightbox.css
+++ b/media/css/lightbox.css
@@ -188,7 +188,7 @@ input.text {
 }
 
 #lightbox .resources-lightbox-content {
-    min-height: 425px;   
+    min-height: 440px;   
 }
 
 #lightbox .resources-lightbox-content div.nootabs-tab {
